minor fix guide/

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -1,8 +1,8 @@
 # Server
 
-[*HttpServer*](../actix_web/struct.HttpServer.html) type is responsible for 
-serving http requests. *HttpServer* accept applicaiton factory as a parameter, 
-Application factory must have `Send` + `Sync` bounderies. More about that in 
+[*HttpServer*](../actix_web/struct.HttpServer.html) type is responsible for
+serving http requests. *HttpServer* accept application factory as a parameter,
+Application factory must have `Send` + `Sync` bounderies. More about that in
 *multi-threading* section. To bind to specific socket address `bind()` must be used.
 This method could be called multiple times. To start http server one of the *start*
 methods could be used. `start()` method start simple server, `start_tls()` or `start_ssl()`
@@ -54,7 +54,7 @@ fn main() {
              .resource("/", |r| r.h(httpcodes::HTTPOk)))
         .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
         .spawn();
-        
+
     let _ = addr.call_fut(dev::StopServer{graceful: true}).wait();  // <- Send `StopServer` message to server.
 }
 ```
@@ -116,7 +116,7 @@ Note on *HTTP/2.0* protocol over tls without prior knowledge, it requires
 [tls alpn](https://tools.ietf.org/html/rfc7301). At the moment only
 `openssl` has `alpn ` support.
 
-Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls) 
+Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls)
 for full example.
 
 ## Keep-Alive
@@ -172,7 +172,7 @@ have specific amount of time to finish serving requests. Workers still alive aft
 timeout are force dropped. By default shutdown timeout sets to 30 seconds.
 You can change this parameter with `HttpServer::shutdown_timeout()` method.
 
-You can send stop message to server with server address and specify if you what 
+You can send stop message to server with server address and specify if you what
 graceful shutdown or not. `start()` or `spawn()` methods return address of the server.
 
 ```rust
