refactor http actor usage

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -72,7 +72,7 @@ Create `Logger` middleware with the specified `format`.
 Default `Logger` could be created with `default` method, it uses the default format:
 
 ```ignore
-  %a %t "%r" %s %b "%{Referrer}i" "%{User-Agent}i" %T
+  %a %t "%r" %s %b "%{Referer}i" "%{User-Agent}i" %T
 ```
 ```rust
 # extern crate actix_web;
