handle application prefix for handlers; use handler for StaticFiles

--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -25,9 +25,8 @@ fn main() {
 ## Directory
 
 To serve files from specific directory and sub-directories `StaticFiles` could be used. 
-`StaticFiles` could be registered with `Application::resource` method.
-`StaticFiles` requires tail named path expression for resource registration.
-And this name has to be used in `StaticFile` constructor.
+`StaticFiles` must be registered with `Application::handler()` method otherwise
+it won't be able to server sub-paths.
 
 ```rust
 # extern crate actix_web;
@@ -35,12 +34,11 @@ use actix_web::*;
 
 fn main() {
     Application::new()
-        .resource("/static/{tail:.*}", |r| r.h(fs::StaticFiles::new("tail", ".", true)))
+        .handler("/static", fs::StaticFiles::new(".", true))
         .finish();
 }
 ```
 
-First parameter is a name of path pattern. Second parameter is a base directory. 
-Third parameter is *show_index*, if it is set to *true*
+First parameter is a base directory. Second parameter is *show_index*, if it is set to *true*
 directory listing would be returned for directories, if it is set to *false*
 then *404 Not Found* would be returned instead of directory listing.
