use explicit actix:: mod

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -226,7 +226,7 @@ fn main() {
         .start();
 
     // Subscribe to unix signals
-    let signals = Arbiter::system_registry().get::<ProcessSignals>();
+    let signals = actix::Arbiter::system_registry().get::<ProcessSignals>();
     signals.send(Subscribe(addr.subscriber()));
 
     println!("Started http server: 127.0.0.1:8080");
