upgrade to actix 0.4

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -195,13 +195,8 @@ fn main() {
 }
 ```
 
-It is possible to use unix signals on compatible OSs. "signal" feature needs to be enabled
-in *Cargo.toml* for *actix-web* dependency.
-
-```toml
-[dependencies]
-actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
-```
+It is possible to use signals. *CTRL-C* is available on all OSs, other signals are 
+available on unix systems.
 
 Then you can subscribe your server to unix signals. Http server handles three signals:
 
