subscriber to os signals automatically

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -47,15 +47,27 @@ address of the started http server. Actix http server accept several messages:
 # extern crate actix_web;
 # use futures::Future;
 use actix_web::*;
+use std::thread;
+use std::sync::mpsc;
 
 fn main() {
-    let addr = HttpServer::new(
-        || Application::new()
-             .resource("/", |r| r.h(httpcodes::HTTPOk)))
-        .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
-        .spawn();
+    let (tx, rx) = mpsc::channel();
+    
+    thread::spawn(move || {
+        let sys = actix::System::new("http-server");
+        let addr = HttpServer::new(
+            || Application::new()
+                .resource("/", |r| r.h(httpcodes::HTTPOk)))
+            .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
+            .shutdown_timeout(60)    // <- Set shutdown timeout to 60 seconds
+            .start();
+        let _ = tx.send(addr);
+        let _ = sys.run();
+    });
 
-    let _ = addr.call_fut(dev::StopServer{graceful: true}).wait();  // <- Send `StopServer` message to server.
+    let addr = rx.recv().unwrap();
+    let _ = addr.call_fut(
+         dev::StopServer{graceful:true}).wait(); // <- Send `StopServer` message to server.
 }
 ```
 
@@ -173,59 +185,13 @@ timeout are force dropped. By default shutdown timeout sets to 30 seconds.
 You can change this parameter with `HttpServer::shutdown_timeout()` method.
 
 You can send stop message to server with server address and specify if you what
-graceful shutdown or not. `start()` or `spawn()` methods return address of the server.
+graceful shutdown or not. `start()` methods return address of the server.
 
-```rust
-# extern crate futures;
-# extern crate actix;
-# extern crate actix_web;
-# use futures::Future;
-use actix_web::*;
-
-fn main() {
-    let addr = HttpServer::new(
-        || Application::new()
-             .resource("/", |r| r.h(httpcodes::HTTPOk)))
-        .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
-        .shutdown_timeout(60)    // <- Set shutdown timeout to 60 seconds
-        .spawn();
-
-    let _ = addr.call_fut(
-         dev::StopServer{graceful:true}).wait(); // <- Send `StopServer` message to server.
-}
-```
-
-It is possible to use signals. *CTRL-C* is available on all OSs, other signals are 
-available on unix systems.
-
-Then you can subscribe your server to unix signals. Http server handles three signals:
+Http server handles several OS signals. *CTRL-C* is available on all OSs,
+other signals are available on unix systems.
 
 * *SIGINT* - Force shutdown workers
 * *SIGTERM* - Graceful shutdown workers
 * *SIGQUIT* - Force shutdown workers
 
-```rust,ignore
-# extern crate futures;
-# extern crate actix;
-# extern crate actix_web;
-use actix_web::*;
-use actix::actors::signal::{ProcessSignals, Subscribe};
-
-fn main() {
-    let sys = actix::System::new("signals");
-
-    let addr = HttpServer::new(|| {
-        Application::new()
-            .resource("/", |r| r.h(httpcodes::HTTPOk))})
-        .bind("127.0.0.1:8080").unwrap()
-        .start();
-
-    // Subscribe to unix signals
-    let signals = actix::Arbiter::system_registry().get::<ProcessSignals>();
-    signals.send(Subscribe(addr.subscriber()));
-
-    println!("Started http server: 127.0.0.1:8080");
-    #     actix::Arbiter::system().send(actix::msgs::SystemExit(0));
-    let _ = sys.run();
-}
-```
+It is possible to disable signals handling with `HttpServer::disable_signals()` method.
