refactor Middleware trait, use Result

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -34,19 +34,19 @@ impl<S> Middleware<S> for Headers {
 
     /// Method is called when request is ready. It may return
     /// future, which should resolve before next middleware get called.
-    fn start(&self, req: &mut HttpRequest<S>) -> Started {
+    fn start(&self, req: &mut HttpRequest<S>) -> Result<Started> {
         req.headers_mut().insert(
             header::CONTENT_TYPE, header::HeaderValue::from_static("text/plain"));
-        Started::Done
+        Ok(Started::Done)
     }
 
     /// Method is called when handler returns response,
     /// but before sending http message to peer.
-    fn response(&self, req: &mut HttpRequest<S>, mut resp: HttpResponse) -> Response {
+    fn response(&self, req: &mut HttpRequest<S>, mut resp: HttpResponse) -> Result<Response> {
         resp.headers_mut().insert(
             header::HeaderName::try_from("X-VERSION").unwrap(),
             header::HeaderValue::from_static("0.2"));
-        Response::Done(resp)
+        Ok(Response::Done(resp))
     }
 }
 
