move server protocol impl to submodule

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -67,7 +67,7 @@ fn main() {
 
     let addr = rx.recv().unwrap();
     let _ = addr.call_fut(
-         dev::StopServer{graceful:true}).wait(); // <- Send `StopServer` message to server.
+         server::StopServer{graceful:true}).wait(); // <- Send `StopServer` message to server.
 }
 ```
 
