user guide spelling

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -1,7 +1,7 @@
 # Middlewares
 
-Actix middlewares system allows to add additional behaviour to request/response processing.
-Middleware can hook into incomnig request process and modify request or halt request 
+Actix middlewares system allows to add additional behavior to request/response processing.
+Middleware can hook into incoming request process and modify request or halt request 
 processing and return response early. Also it can hook into response processing.
 
 Typically middlewares involves in following actions:
@@ -12,9 +12,9 @@ Typically middlewares involves in following actions:
 * Access external services (redis, logging, sessions)
 
 Middlewares are registered for each application and get executed in same order as
-registraton order. In general, *middleware* is a type that implements
+registration order. In general, *middleware* is a type that implements
 [*Middleware trait*](../actix_web/middlewares/trait.Middleware.html). Each method
-in this trait has default implementation. Each method can return result immidietly
+in this trait has default implementation. Each method can return result immediately
 or *future* object.
 
 Here is example of simple middleware that adds request and response headers:
@@ -148,7 +148,7 @@ fn main() {
 ## User sessions
 
 Actix provides general solution for session management. 
-[*Session storage*](../actix_web/middleware/struct.SessionStorage.html) middleare can be 
+[*Session storage*](../actix_web/middleware/struct.SessionStorage.html) middleware can be 
 use with different backend types to store session data in different backends. 
 By default only cookie session backend is implemented. Other backend implementations 
 could be added later.
@@ -162,7 +162,7 @@ You need to pass a random value to the constructor of *CookieSessionBackend*.
 This is private key for cookie session. When this value is changed, all session data is lost.
 Note that whatever you write into your session is visible by the user (but not modifiable).
 
-In general case, you cretate
+In general case, you create
 [*Session storage*](../actix_web/middleware/struct.SessionStorage.html) middleware
 and initializes it with specific backend implementation, like *CookieSessionBackend*.
 To access session data
