--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -36,8 +36,9 @@ We can send `CreateUser` message to `DbExecutor` actor, and as result we get
 
 ```rust,ignore
 impl Handler<CreateUser> for DbExecutor {
+    type Result = Result<User, Error>
 
-    fn handle(&mut self, msg: CreateUser, _: &mut Self::Context) -> Response<Self, CreateUser>
+    fn handle(&mut self, msg: CreateUser, _: &mut Self::Context) -> Self::Result
     {
         use self::schema::users::dsl::*;
 
@@ -59,7 +60,7 @@ impl Handler<CreateUser> for DbExecutor {
             .load::<models::User>(&self.0)
             .expect("Error loading person");
 
-        Self::reply(items.pop().unwrap())
+        Ok(items.pop().unwrap())
     }
 }
 ```
@@ -77,7 +78,7 @@ struct State {
 fn main() {
     let sys = actix::System::new("diesel-example");
 
-    // Start 3 parallele db executors
+    // Start 3 parallel db executors
     let addr = SyncArbiter::start(3, || {
         DbExecutor(SqliteConnection::establish("test.db").unwrap())
     });
@@ -94,7 +95,7 @@ fn main() {
 }
 ```
 
-And finally we can use address in a requst handler. We get message response
+And finally we can use address in a request handler. We get message response
 asynchronously, so handler needs to return future object, also `Route::a()` needs to be 
 used for async handler registration.
 
