--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -2,7 +2,7 @@
 
 [*HttpServer*](../actix_web/struct.HttpServer.html) type is responsible for
 serving http requests. *HttpServer* accept application factory as a parameter,
-Application factory must have `Send` + `Sync` bounderies. More about that in
+Application factory must have `Send` + `Sync` boundaries. More about that in
 *multi-threading* section. To bind to specific socket address `bind()` must be used.
 This method could be called multiple times. To start http server one of the *start*
 methods could be used. `start()` method start simple server, `start_tls()` or `start_ssl()`
