fix guide example

--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -116,7 +116,8 @@ specific error response. We can use helper types for first example with custom e
 #[macro_use] extern crate failure;
 use actix_web::*;
 
-#[derive(Debug)]
+#[derive(Fail, Debug)]
+#[fail(display="Error {}", name)]
 struct MyError {
    name: &'static str
 }
