--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -42,3 +42,8 @@ fn main() {
 First parameter is a base directory. Second parameter is *show_index*, if it is set to *true*
 directory listing would be returned for directories, if it is set to *false*
 then *404 Not Found* would be returned instead of directory listing.
+
+Instead of showing files listing for directory, it is possible to redirect to specific
+index file. Use 
+[*StaticFiles::index_file()*](../actix_web/s/struct.StaticFiles.html#method.index_file)
+method to configure this redirect.
