more HttpServer type simplification

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -80,12 +80,10 @@ could be overridden with `HttpServer::threads()` method.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-# use tokio_core::net::TcpStream;
-# use std::net::SocketAddr;
 use actix_web::*;
 
 fn main() {
-    HttpServer::<TcpStream, SocketAddr, _, _>::new(
+    HttpServer::new(
         || Application::new()
             .resource("/", |r| r.h(httpcodes::HTTPOk)))
         .threads(4); // <- Start 4 workers
@@ -143,12 +141,10 @@ connection behavior is defined by server settings.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-# use tokio_core::net::TcpStream;
-# use std::net::SocketAddr;
 use actix_web::*;
 
 fn main() {
-    HttpServer::<TcpStream, SocketAddr, _, _>::new(||
+    HttpServer::new(||
         Application::new()
             .resource("/", |r| r.h(httpcodes::HTTPOk)))
         .keep_alive(None); // <- Use `SO_KEEPALIVE` socket option.
