--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -66,7 +66,7 @@ fn main() {
     });
 
     let addr = rx.recv().unwrap();
-    let _ = addr.call_fut(
+    let _ = addr.call(
          server::StopServer{graceful:true}).wait(); // <- Send `StopServer` message to server.
 }
 ```
