--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -24,7 +24,7 @@ fn main() {
         .bind("127.0.0.1:59080").unwrap()
         .start();
 
-#     actix::Arbiter::system().send(actix::msgs::SystemExit(0));
+#     actix::Arbiter::system().do_send(actix::msgs::SystemExit(0));
     let _ = sys.run();
 }
 ```
@@ -52,7 +52,7 @@ use std::sync::mpsc;
 
 fn main() {
     let (tx, rx) = mpsc::channel();
-    
+
     thread::spawn(move || {
         let sys = actix::System::new("http-server");
         let addr = HttpServer::new(
@@ -66,7 +66,7 @@ fn main() {
     });
 
     let addr = rx.recv().unwrap();
-    let _ = addr.call(
+    let _ = addr.send(
          server::StopServer{graceful:true}).wait(); // <- Send `StopServer` message to server.
 }
 ```
