--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -200,7 +200,7 @@ fn main() {
             )))
         .bind("127.0.0.1:59880").unwrap()
         .start();
-#     actix::Arbiter::system().send(actix::msgs::SystemExit(0));
+#     actix::Arbiter::system().do_send(actix::msgs::SystemExit(0));
 #     let _ = sys.run();
 }
 ```
