use actix 0.5 release

--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -72,7 +72,7 @@ can access it.
 ```rust,ignore
 /// This is state where we will store *DbExecutor* address.
 struct State {
-    db: SyncAddress<DbExecutor>,
+    db: Addr<Syn, DbExecutor>,
 }
 
 fn main() {
@@ -106,7 +106,7 @@ fn index(req: HttpRequest<State>) -> Box<Future<Item=HttpResponse, Error=Error>>
     let name = &req.match_info()["name"];
 
     // Send message to `DbExecutor` actor
-    req.state().db.call_fut(CreateUser{name: name.to_owned()})
+    req.state().db.send(CreateUser{name: name.to_owned()})
         .from_err()
         .and_then(|res| {
             match res {
