could used -> could be used, latest actix sync

--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -9,7 +9,7 @@ can be run in parallel and process messages from same queue (sync actors work in
 
 Let's create simple db api that can insert new user row into sqlite table.
 We have to define sync actor and connection that this actor will use. Same approach
-could used for other databases.
+could be used for other databases.
 
 ```rust,ignore
 use actix::prelude::*;*
@@ -122,4 +122,4 @@ Full example is available in
 [examples directory](https://github.com/actix/actix-web/tree/master/examples/diesel/).
 
 More information on sync actors could be found in 
-[actix documentation](https://docs.rs/actix/0.3.3/actix/sync/index.html).
+[actix documentation](https://docs.rs/actix/0.5.0/actix/sync/index.html).
