--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -110,8 +110,8 @@ fn index(req: HttpRequest<State>) -> Box<Future<Item=HttpResponse, Error=Error>>
         .from_err()
         .and_then(|res| {
             match res {
-                Ok(user) => Ok(httpcodes::HTTPOk.build().json(user)?),
-                Err(_) => Ok(httpcodes::HTTPInternalServerError.into())
+                Ok(user) => Ok(httpcodes::HttpOk.build().json(user)?),
+                Err(_) => Ok(httpcodes::HttpInternalServerError.into())
             }
         })
         .responder()
