--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -12,7 +12,7 @@ We have to define sync actor and connection that this actor will use. Same appro
 could be used for other databases.
 
 ```rust,ignore
-use actix::prelude::*;*
+use actix::prelude::*;
 
 struct DbExecutor(SqliteConnection);
 
