--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -36,7 +36,7 @@ We can send `CreateUser` message to `DbExecutor` actor, and as result we get
 
 ```rust,ignore
 impl Handler<CreateUser> for DbExecutor {
-    type Result = Result<User, Error>
+    type Result = Result<User, Error>;
 
     fn handle(&mut self, msg: CreateUser, _: &mut Self::Context) -> Self::Result
     {
