--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -24,10 +24,12 @@ impl Actor for DbExecutor {
 This is definition of our actor. Now we need to define *create user* message and response.
 
 ```rust,ignore
-#[derive(Message)]
-#[rtype(User, Error)]
 struct CreateUser {
     name: String,
+}
+
+impl Message for CreateUser {
+    type Result = Result<User, Error>;
 }
 ```
 
