--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -109,7 +109,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 ## Error helpers
 
 Actix provides set of error helper types. It is possible to use them to generate
-specific error response. We can use helper types for first example with custom error.
+specific error responses. We can use helper types for first example with custom error.
 
 ```rust
 # extern crate actix_web;
@@ -124,7 +124,7 @@ struct MyError {
 fn index(req: HttpRequest) -> Result<&'static str> {
     let result: Result<&'static str, MyError> = Err(MyError{name: "test"});
     
-    Ok(result.map_err(error::ErrorBadRequest)?)
+    Ok(result.map_err(|e| error::ErrorBadRequest(e))?)
 }
 # fn main() {
 #     Application::new()
