--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -51,7 +51,7 @@ impl Handler<CreateUser> for DbExecutor {
             name: &msg.name,
         };
 
-        // normal diesl operations
+        // normal diesel operations
         diesel::insert_into(users)
             .values(&new_user)
             .execute(&self.0)
